--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     image: node:20-alpine
     container_name: jsonserver
     working_dir: /app
-    command: sh -c "npm i -g json-server && json-server --watch /data/products.json --host 0.0.0.0 --port 3000"
+    command: sh -c "npm i -g json-server && json-server --watch /data/data.json --host 0.0.0.0 --port 3001"
     volumes:
       - ./data:/data
     ports:
