--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,11 +36,11 @@ services:
     image: node:20-alpine
     container_name: jsonserver
     working_dir: /app
-    command: sh -c "npm i -g json-server && json-server --watch /data/data.json --host 0.0.0.0 --port 3001"
+    command: sh -c "npm i -g json-server && json-server --watch /data/data.json --port 3001"
     volumes:
       - ./data:/data
     ports:
-      - "3000:3000"
+      - "3001:3001"
     restart: unless-stopped
     networks:
       - pi_network
